--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <h1>Jimmy Chen</h1>
             <h2>Full Stack / UX / Industrial Designer</h2>
             <p><a href="public/images/JimmyChen-Master Resume-updated-2020-05-18.docx" class="btn-rounded-white" download>Download Resume</a></p>
+            <p><a href="public/images/JimmyChen-Master Resume-updated-2020-05-18.docx" class="btn-rounded-white" download>下载中文简历</a></p>
         </div>
         <!-- End #lead-content -->
 
@@ -153,6 +154,31 @@
 
     <div id="education">
         <h2 class="heading">Education</h2>
+
+        <div class="education-block">
+            <h3>General Assembly</h3>
+            <span class="education-date">Feb 2020 - May 2020</span>
+            <h4>Software Engineer Immersive</h4>
+            <ul>
+                <li>
+                    <a href="https://mi-tea.herokuapp.com"><strong>Mi-TEA</strong></a> [React, HTML, CSS, SCSS, JavaScript, Express, Node.js, MongoDB, Bootstrap]<br/><strong>User:</strong> jimmychen.xin@gmail.com <br/><strong>Password:</strong> jimmy000 
+                </li>
+                <li>
+                    <a href="https://wayfarer-sei09t1.herokuapp.com/"><strong>Wayfarer</strong></a> [React, HTML, CSS, SCSS, JavaScript, Express, Node.js, MongoDB, Bootstrap]<br/><strong>User:</strong> jimmychen.xin@gmail.com <br/><strong>Password:</strong> jimmy000
+                </li>
+                <li>
+                    <a href="https://github.com/jimtie/Infrared"><strong>Infrared</strong></a> [Python, Django, Postgresql, HTML, Bootstrap]<br/><strong>User:</strong> SSJ <br/><strong>Password:</strong> 123456789
+                </li>
+                <li>
+                    <a href="https://github.com/jimtie/Toyslist"><strong>Toyslist</strong></a>[HTML, CSS, JavaScript, Express, MongoDB, Bootstrap]<br/><strong>User:</strong> bob@gmail.com <br/><strong>Zipcode:</strong> 94111 || 94222
+                </li>
+                <li>
+                    <a href="https://github.com/jimtie/King-Kong"><strong>King-Kong</strong></a> [HTML, CSS, JavaScript]
+                </li>
+            </ul>
+        </div>
+        <!-- End .education-block -->
+
         <div class="education-block">
             <h3>Academy of Art University</h3>
             <span class="education-date">Sep 2010 - Dec 2014</span>
@@ -229,15 +255,15 @@
                     <h3>Programming</h3>
                     <div class="project row" id="project-pg">
                         <a data-toggle="modal" data-target="#pg-m1" class="project-image btn" id="pg-1">
-                        <img src="public/images/project.jpg" class="p-image shadow-lg">
+                        <img src="public/images/snap-mi-tea.png" class="p-image shadow-lg">
                         </a>
 
                         <a data-toggle="modal" data-target="#pg-m2" class="project-image btn" id="pg-2">
-                        <img src="public/images/project.jpg" class="p-image shadow-lg">
+                        <img src="public/images/snap-toyslist.png" class="p-image shadow-lg">
                         </a>
 
                         <a data-toggle="modal" data-target="#pg-m3" class="project-image btn" id="pg-3">
-                        <img src="public/images/project.jpg" class="p-image shadow-lg">
+                        <img src="public/images/snap-king-kong.png" class="p-image shadow-lg">
                         </a>
                     </div>
                 </div>
@@ -363,14 +389,14 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title">Testing Page:<a href="https://mi-tea.herokuapp.com">Mi-TEA</a> <strong>USER:</strong>jimmychen.xin@gmail.com <strong>PASSWORD:</strong>jimmy000 <br/><a href="https://github.com/jimtie/mi-tea-client">Front End</a><br/><a href="//github.com/jimtie/mi-tea-api">Back End</a></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body mb-0 p-0 pg-m1">
+                <div class="modal-body mb-0 p-0">
                     <div class="z-depth-1-half">
-                      <iframe class="responsive-iframe" frameborder="0" style="overflow:scroll;height:600px;width:100%" height="100%" width="100%" src="./public/images/mi-tea.pdf" allowfullscreen></iframe>
+                      <iframe class="responsive-iframe" frameborder="0" style="overflow:hidden;height:600px;width:100%" height=auto width="100%" src="./public/images/mi-tea.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
@@ -381,14 +407,14 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title">Go to Github Repo:<a href="https://github.com/jimtie/toyslist">Toyslist</a></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="https://infrared-project2-ssj.herokuapp.com/" allowfullscreen></iframe>
+                    <div class="z-depth-1-half">
+                      <iframe class="responsive-iframe" frameborder="0" style="overflow:hidden;height:500px;width:100%" height=auto width="100%" src="./public/images/toyslist.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
@@ -399,7 +425,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title">Go to Github Repo:<a href="https://github.com/jimtie/King-Kong">King Kong</a></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -442,7 +468,7 @@
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2>Contact Me</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/mlepgprw">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
@@ -460,7 +486,8 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 YOUR NAME
+                        <strong>Email:</strong> jimmychen.xin@gmail.com <br/>
+                        <strong>Wechat:</strong> jimmyc0604 <br/>
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -471,15 +498,16 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/jimmy-chenxin/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
+                            <a href="https://github.com/jimtie" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        </li>
+                        <!-- <li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
+                        </li> -->
+                        
+                        <!-- <li>
                             <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
                         <li>
@@ -487,7 +515,7 @@
                         </li>
                         <li>
                             <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
