--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </br>   - Salt Flats Racing car design 
                     </br>   - General Motors Concept car Interior UI design
                     </br>   - Google campus landscape design
-                    </br>   - Wearable smart device design <
+                    </br>   - Wearable smart device design
                 <ul>
                     <li>Evaluates design ideas based on factors such as appealing appearance, design-function relationship</li>
                     <li>Integrates findings and concepts and sketches design ideas</li>
@@ -238,7 +238,7 @@
                     <h3>Industrial Design</h3>
                     <div class="project row" id="project-id">
                         <a data-toggle="modal" data-target="#id-m1" class="project-image btn" id="id-1">
-                        <img src="public/images/project.jpg" class="p-image shadow-lg">
+                        <img src="public/images/snap-mitea.png" class="p-image shadow-lg">
                         </a>
 
                         <a data-toggle="modal" data-target="#id-m2" class="project-image btn" id="id-2">
@@ -263,7 +263,7 @@
                         </a>
 
                         <a data-toggle="modal" data-target="#pg-m3" class="project-image btn" id="pg-3">
-                        <img src="public/images/snap-king-kong.png" class="p-image shadow-lg">
+                        <img src="public/images/snap-king-knog.png" class="p-image shadow-lg">
                         </a>
                     </div>
                 </div>
@@ -286,7 +286,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                      <iframe class="embed-responsive-item" src="https://mi-tea-web.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
@@ -341,7 +341,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                      <iframe class="embed-responsive-item" src="./public/images/mi-tea-web.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
