--- a/index.html
+++ b/index.html
@@ -216,15 +216,15 @@
         <!-- <div class="container"> -->
             <div class="row">
                 <div class="UX">
-                    <h3>UI/UX design</h3>
+                    <!-- <h3>UI/UX design</h3> -->
                     <div class="project row" id="project-ux">
 
                         <a data-toggle="modal" data-target="#ux-m1" class="project-image btn" id="ux-1">
-                        <img src="public/images/project.jpg" class="p-image shadow-lg">
+                        <img src="public/images/snap-sercle.png" class="p-image shadow-lg">
                         </a>
                         
                         <a data-toggle="modal" data-target="#ux-m2" class="project-image btn" id="ux-2">
-                        <img src="public/images/project.jpg" class="p-image shadow-lg">
+                        <img src="public/images/snap-mitea-1.png" class="p-image shadow-lg">
                         </a>
                         
                         <a data-toggle="modal" data-target="#ux-m3" class="project-image btn" id="ux-3">
@@ -235,14 +235,14 @@
                 </div>
                 <!-- End .project -->
                 <div class="ID">
-                    <h3>Industrial Design</h3>
+                    <!-- <h3>Industrial Design</h3> -->
                     <div class="project row" id="project-id">
                         <a data-toggle="modal" data-target="#id-m1" class="project-image btn" id="id-1">
-                        <img src="public/images/snap-mitea.png" class="p-image shadow-lg">
+                        <img src="public/images/snap-mitea-1.png" class="p-image shadow-lg">
                         </a>
 
                         <a data-toggle="modal" data-target="#id-m2" class="project-image btn" id="id-2">
-                        <img src="public/images/project.jpg" class="p-image shadow-lg">
+                        <img src="public/images/snap-pen-1.png" class="p-image shadow-lg">
                         </a>
 
                         <a data-toggle="modal" data-target="#id-m3" class="project-image btn" id="id-3">
@@ -252,7 +252,7 @@
                 </div>
                 <!-- End .project -->
                 <div class="PG">
-                    <h3>Programming</h3>
+                    <!-- <h3>Programming</h3> -->
                     <div class="project row" id="project-pg">
                         <a data-toggle="modal" data-target="#pg-m1" class="project-image btn" id="pg-1">
                         <img src="public/images/snap-mi-tea.png" class="p-image shadow-lg">
@@ -286,7 +286,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="https://mi-tea-web.pdf" allowfullscreen></iframe>
+                      <iframe class="embed-responsive-item" src="./public/images/sercle.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
@@ -304,7 +304,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                      <iframe class="embed-responsive-item" src="./public/images/mi-tea-web.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
@@ -359,7 +359,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                      <iframe class="embed-responsive-item" src="./public/images/easy-correct.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
@@ -395,8 +395,8 @@
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="z-depth-1-half">
-                      <iframe class="responsive-iframe" frameborder="0" style="overflow:hidden;height:600px;width:100%" height=auto width="100%" src="./public/images/mi-tea.pdf" allowfullscreen></iframe>
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="./public/images/mi-tea.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
@@ -413,8 +413,8 @@
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="z-depth-1-half">
-                      <iframe class="responsive-iframe" frameborder="0" style="overflow:hidden;height:500px;width:100%" height=auto width="100%" src="./public/images/toyslist.pdf" allowfullscreen></iframe>
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                      <iframe class="embed-responsive-item" src="./public/images/toyslist.pdf" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>      
@@ -425,12 +425,12 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Go to Github Repo:<a href="https://github.com/jimtie/King-Kong">King Kong</a></h5>
+                    <h5 class="modal-title"><a href="https://rawcdn.githack.com/jimtie/King-Kong/master/index-2.html">Play the Game</a><br/><a href="https://github.com/jimtie/King-Kong">Go to Github Repo</a></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body mb-0 p-0 pg-m3">
+                <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
                       <iframe class="embed-responsive-item" src="./public/images/king-kong.pdf" allowfullscreen></iframe>
                     </div>
