--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<link rel="shortcut icon" href="public/images/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="public/images/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="public/images/ico.ico" type="image/x-icon">
+	<link rel="icon" href="public/images/ico.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="./public/libs/font-awesome/css/font-awesome.min.css">
     <link href="./public/css/bootstrap.min.css" rel="stylesheet">
@@ -228,7 +228,7 @@
                         </a>
                         
                         <a data-toggle="modal" data-target="#ux-m3" class="project-image btn" id="ux-3">
-                        <img src="public/images/project.jpg" class="p-image shadow-lg">
+                        <img src="public/images/cubit.png" class="p-image shadow-lg">
                         </a>
 
                     </div>
@@ -238,15 +238,15 @@
                     <!-- <h3>Industrial Design</h3> -->
                     <div class="project row" id="project-id">
                         <a data-toggle="modal" data-target="#id-m1" class="project-image btn" id="id-1">
-                        <img src="public/images/snap-mitea-1.png" class="p-image shadow-lg">
-                        </a>
-
-                        <a data-toggle="modal" data-target="#id-m2" class="project-image btn" id="id-2">
                         <img src="public/images/snap-pen-1.png" class="p-image shadow-lg">
                         </a>
 
+                        <a data-toggle="modal" data-target="#id-m2" class="project-image btn" id="id-2">
+                        <img src="public/images/snap-mi-tea.png" class="p-image shadow-lg">
+                        </a>
+
                         <a data-toggle="modal" data-target="#id-m3" class="project-image btn" id="id-3">
-                        <img src="public/images/project.jpg" class="p-image shadow-lg">
+                        <img src="public/images/snap-toyslist.png" class="p-image shadow-lg">
                         </a>
                     </div>
                 </div>
@@ -255,15 +255,15 @@
                     <!-- <h3>Programming</h3> -->
                     <div class="project row" id="project-pg">
                         <a data-toggle="modal" data-target="#pg-m1" class="project-image btn" id="pg-1">
-                        <img src="public/images/snap-mi-tea.png" class="p-image shadow-lg">
+                        <img src="public/images/snap-king-kong.png" class="p-image shadow-lg">
                         </a>
 
                         <a data-toggle="modal" data-target="#pg-m2" class="project-image btn" id="pg-2">
-                        <img src="public/images/snap-toyslist.png" class="p-image shadow-lg">
+                        <img src="public/images/construction.png" class="p-image shadow-lg">
                         </a>
 
                         <a data-toggle="modal" data-target="#pg-m3" class="project-image btn" id="pg-3">
-                        <img src="public/images/snap-king-kong.png" class="p-image shadow-lg">
+                        <img src="public/images/logo.png" class="p-image shadow-lg">
                         </a>
                     </div>
                 </div>
@@ -279,14 +279,14 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title">User Experience Design <strong>&</strong> User Interface Design</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="./public/images/sercle.pdf" allowfullscreen></iframe>
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/sercle.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
@@ -297,14 +297,14 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title">Industrial Design <strong>&</strong> User Experience Design</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="./public/images/mi-tea-web.pdf" allowfullscreen></iframe>
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/mi-tea-web.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
@@ -315,14 +315,14 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title">Industrial Design <strong>&</strong> User Experience Design <strong>&</strong> User Interface Design</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/cubit.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
@@ -340,8 +340,8 @@
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="./public/images/mi-tea-web.pdf" allowfullscreen></iframe>
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/mi-tea-web.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
@@ -352,14 +352,14 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title">Industrial Design</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="./public/images/easy-correct.pdf" allowfullscreen></iframe>
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/easy-correct.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
@@ -376,8 +376,8 @@
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="https://github.com/embed" allowfullscreen></iframe>
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/toyslist.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
@@ -389,14 +389,14 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Testing Page:<a href="https://mi-tea.herokuapp.com">Mi-TEA</a> <strong>USER:</strong>jimmychen.xin@gmail.com <strong>PASSWORD:</strong>jimmy000 <br/><a href="https://github.com/jimtie/mi-tea-client">Front End</a><br/><a href="//github.com/jimtie/mi-tea-api">Back End</a></h5>
+                    <h5 class="modal-title">Programming<br/>Testing Page:<a href="https://mi-tea.herokuapp.com">Mi-TEA</a> <strong>USER:</strong>jimmychen.xin@gmail.com <strong>PASSWORD:</strong>jimmy000 <br/> Go to Github Repo: <a href="https://github.com/jimtie/mi-tea-client">Front End</a><br/>Go to Github Repo: <a href="//github.com/jimtie/mi-tea-api">Back End</a></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="./public/images/mi-tea.pdf" allowfullscreen></iframe>
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/mi-tea.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
@@ -407,14 +407,14 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Go to Github Repo:<a href="https://github.com/jimtie/toyslist">Toyslist</a></h5>
+                    <h5 class="modal-title">Construction</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="./public/images/toyslist.pdf" allowfullscreen></iframe>
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/construction.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
@@ -425,14 +425,14 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title"><a href="https://rawcdn.githack.com/jimtie/King-Kong/master/index-2.html">Play the Game</a><br/><a href="https://github.com/jimtie/King-Kong">Go to Github Repo</a></h5>
+                    <h5 class="modal-title">Logo Design for Spartan Leather Works</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body mb-0 p-0">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe class="embed-responsive-item" src="./public/images/king-kong.pdf" allowfullscreen></iframe>
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/logo.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
