--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div id="lead-content">
             <h1>Jimmy Chen</h1>
             <h2>Full Stack / UX / Industrial Designer</h2>
-            <p><a href="public/images/JimmyChen-Master Resume-updated-2020-05-18.docx" class="btn-rounded-white" download>Download Resume</a></p>
-            <p><a href="public/images/JimmyChen-Master Resume-updated-2020-05-18.docx" class="btn-rounded-white" download>下载中文简历</a></p>
+            <p><a href="public/images/JimmyChen-Resume-Web.docx" class="btn-rounded-white" download>Download Resume</a></p>
+            <p><a href="public/images/陈炘-中文简历-网页.docx" class="btn-rounded-white" download>下载中文简历</a></p>
         </div>
         <!-- End #lead-content -->
 
@@ -341,7 +341,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive z-depth-1-half">
-                      <img src="./public/images/mi-tea-web.jpg" style="width: 100%">
+                      <img src="./public/images/easy-correct.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
@@ -359,7 +359,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive z-depth-1-half">
-                      <img src="./public/images/easy-correct.jpg" style="width: 100%">
+                      <img src="./public/images/mi-tea.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
@@ -396,7 +396,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive z-depth-1-half">
-                      <img src="./public/images/mi-tea.jpg" style="width: 100%">
+                      <img src="./public/images/king-kong.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
