--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<link rel="shortcut icon" href="public/images/ico.ico" type="image/x-icon">
-	<link rel="icon" href="public/images/ico.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="public/images/ico-1.ico" type="image/x-icon">
+	<link rel="icon" href="public/images/ico-1.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="./public/libs/font-awesome/css/font-awesome.min.css">
     <link href="./public/css/bootstrap.min.css" rel="stylesheet">
