--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
                     </div>
                 </div>
                 <!-- End .project -->
-                <div class="PG">
+<!--                 <div class="PG"> -->
                     <!-- <h3>Programming</h3> -->
-                    <div class="project row" id="project-pg">
+<!--                     <div class="project row" id="project-pg">
                         <a data-toggle="modal" data-target="#pg-m1" class="project-image btn" id="pg-1">
                         <img src="public/images/snap-king-kong.png" class="p-image shadow-lg">
                         </a>
@@ -266,7 +266,7 @@
                         <img src="public/images/logo.png" class="p-image shadow-lg">
                         </a>
                     </div>
-                </div>
+                </div> -->
                 <!-- End .project -->
 
             </div>
@@ -370,7 +370,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">UI/UX design <strong>&</strong> Programming<br/>Go to Github Repo: <a href="https://github.com/jimtie/Toyslist">Toyslist</a><br/>Test by <strong>EMAIL:</strong> bob@gmail.com <strong>ZIPCODE:</strong> 94111 or 94222</h5>
+                    <h5 class="modal-title">Programming<br/>Go to Github Repo: <a href="https://github.com/jimtie/Toyslist">Toyslist</a><br/>Test by <strong>EMAIL:</strong> bob@gmail.com <strong>ZIPCODE:</strong> 94111 or 94222</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
