--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="May 2017 – Jan 2020">
+            <div data-date="May 2017 – CURRENT">
                 <h3>Qfusion Labs, Inc</h3></br>
                 <a href="http://www.cubit.cc">www.cubit.cc</a>
                 <h4>Design Lead</h4>
