--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">User Experience Design <strong>&</strong> User Interface Design</h5>
+                    <h5 class="col-12 modal-title text-center"><strong>UX & UI DESIGN</strong></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -297,7 +297,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Industrial Design <strong>&</strong> User Experience Design</h5>
+                    <h5 class="col-12 modal-title text-center"><strong>INDUSTRIAL & UX DESIGN</strong></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -315,7 +315,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Industrial Design <strong>&</strong> UI/UX Design</h5>
+                    <h5 class="col-12 modal-title text-center"><strong>INDUSTRIAL & UX/UI Design</strong> </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -334,7 +334,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Industrial Design</h5>
+                    <h5 class="col-12 modal-title text-center"><strong>INDUSTRIAL DESIGN</strong></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -352,7 +352,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Programming<br/>Testing Page:<a href="https://mi-tea.herokuapp.com">Mi-TEA</a> <strong>USER:</strong>jimmychen.xin@gmail.com <strong>PASSWORD:</strong>jimmy000 <br/> Go to Github Repo: <a href="https://github.com/jimtie/mi-tea-client">Front End</a><br/>Go to Github Repo: <a href="https://github.com/jimtie/mi-tea-api">Back End</a></h5>
+                    <h5 class="col-12 modal-title text-center"><strong>PROGRAMMING</strong></br>Testing Page:<a href="https://mi-tea.herokuapp.com">Mi-TEA</a> <strong>USER:</strong>jimmychen.xin@gmail.com <strong>PASSWORD:</strong>jimmy000 <br/> Go to Github Repo: <a href="https://github.com/jimtie/mi-tea-client">Front End</a><br/>Go to Github Repo: <a href="https://github.com/jimtie/mi-tea-api">Back End</a></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -370,7 +370,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Programming<br/>Go to Github Repo: <a href="https://github.com/jimtie/Toyslist">Toyslist</a><br/>Test by <strong>EMAIL:</strong> bob@gmail.com <strong>ZIPCODE:</strong> 94111 or 94222</h5>
+                    <h5 class="col-12 modal-title text-center"><strong>PROGRAMMING</strong><br/>Go to Github Repo: <a href="https://github.com/jimtie/Toyslist">Toyslist</a><br/>Test by <strong>EMAIL:</strong> bob@gmail.com <strong>ZIPCODE:</strong> 94111 or 94222</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
