--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1>Jimmy Chen</h1>
             <h2>Full Stack / UX / Industrial Designer</h2>
             <p><a href="public/images/Jimmy-Chen-Resume.pdf" class="btn-rounded-white" download>Download Resume</a></p>
-            <p><a href="public/images/陈炘-中文简历-网页.pdf" class="btn-rounded-white" download>下载中文简历</a></p>
+            <!-- <p><a href="public/images/陈炘-中文简历-网页.pdf" class="btn-rounded-white" download>下载中文简历</a></p> -->
         </div>
         <!-- End #lead-content -->
 
